--- a/src/pages/mine/index.scss
+++ b/src/pages/mine/index.scss
@@ -39,7 +39,7 @@
     align-items: center;
     justify-content: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
 }
 
@@ -79,21 +79,24 @@
     margin-bottom: 1rem;
 }
 
-// .am-tabs {
-//     overflow: visible;
-// }
+.tab-love {
+    width: 49%;
+    margin-bottom: 1rem;
+    background: #fff;
+    // padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.love-img {
+    width: 100%;
+}
 
-// .am-tabs-default-bar .am-tabs-default-bar-animated .am-tabs-default-bar-top {
-//     position: sticky;
-//     top: 0;
-//     z-index: 999;
-// }
-
-// // .am-tabs-tab-bar-wrap {
-// //     position: sticky;
-// //     top: 0;
-// //     z-index: 999;
-// // }
+.love-icon {
+    width: 2rem;
+    margin-top: 0.2rem;
+    margin-right: 0.5rem;
+}
 
 .am-tabs-default-bar-tab {
     color: rgba(51, 51, 51, 85);
@@ -105,4 +108,14 @@
 
 .am-tabs-default-bar-underline {
     border: 1px solid rgba(250, 205, 205, 100);
+}
+
+
+.bu-tologin {
+    margin: 0 auto;
+    padding: 4rem;
+    width: 100vw;
+    text-align: center;
+    color: #333;
+    margin-top: 10rem;
 }
