--- a/src/components/Icon/index.scss
+++ b/src/components/Icon/index.scss
@@ -24,6 +24,7 @@ a{
     width: 5rem;
     height: 5rem;
     position: absolute;
-    border: 1px solid red;
+    // border: 1px solid red;
     top: 0;
+    opacity: 0;
 }
